force-app/main/default/objects/CPQ_Product_Rule_Table__c/CPQ_Product_Rule_Table__c.object-meta.xml
<CustomObject>
    <description>SOX object - The configuration stored here helps hiding or showing the V1 products on the UI for Sales Rep. This is used to filter Node Add On Appliances based on Product and Capacity.</description>
    <label>CPQ Product Rule Table</label>
    <nameField>
        <label>CPQ Product Rule Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ Product Rule Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>