force-app/main/default/objects/CPQ_Product_Rule_Table__c/fields/ATGExternalIDUAT__c.field-meta.xml
<CustomField>
    <fullName>ATGExternalIDUAT__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>External ID for migration purposes</inlineHelpText>
    <label>ATGExternalIDUAT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>