force-app/main/default/objects/CPQ_Product_Rule_Table__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <label>Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>192TB</fullName>
            </value>
            <value>
                <fullName>144TB</fullName>
            </value>
            <value>
                <fullName>120TB</fullName>
            </value>
            <value>
                <fullName>96TB</fullName>
            </value>
            <value>
                <fullName>48TB</fullName>
            </value>
            <value>
                <fullName>40TB</fullName>
            </value>
            <value>
                <fullName>36TB</fullName>
            </value>
            <value>
                <fullName>32TB</fullName>
            </value>
            <value>
                <fullName>30TB</fullName>
            </value>
            <value>
                <fullName>24TB</fullName>
            </value>
            <value>
                <fullName>16TB</fullName>
            </value>
            <value>
                <fullName>12TB</fullName>
            </value>
            <value>
                <fullName>56TB</fullName>
            </value>
            <value>
                <fullName>76TB</fullName>
            </value>
            <value>
                <fullName>154TB</fullName>
            </value>
            <value>
                <fullName>92TB</fullName>
            </value>
            <value>
                <fullName>184TB</fullName>
            </value>
            <value>
                <fullName>110TB</fullName>
                <isActive>false</isActive>
                <label>110TB</label>
            </value>
            <value>
                <fullName>55TB</fullName>
                <isActive>false</isActive>
                <label>55TB</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>