force-app/main/default/objects/CPQ_Product_Rule_Table__c/fields/Chassis_Required__c.field-meta.xml
<CustomField>
    <fullName>Chassis_Required__c</fullName>
    <label>Chassis Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>