force-app/main/default/objects/CPQ_Product_Rule_Table__c/fields/Encryption__c.field-meta.xml
<CustomField>
    <fullName>Encryption__c</fullName>
    <label>Encryption</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Non-Encrypted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>