force-app/main/default/objects/CPQ_Product_Rule_Table__c/fields/HPEorUCS__c.field-meta.xml
<CustomField>
    <fullName>HPEorUCS__c</fullName>
    <label>HPE or UCS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HPE</fullName>
            </value>
            <value>
                <fullName>UCS</fullName>
            </value>
            <value>
                <fullName>DELL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>