force-app/main/default/objects/CPQ_Product_Rule_Table__c/fields/Include_CloudOut__c.field-meta.xml
<CustomField>
    <fullName>Include_CloudOut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include CloudOut?</label>
    <type>Checkbox</type>
</CustomField>