force-app/main/default/objects/CPQ_Product_Rule_Table__c/fields/Rubrik_Pro_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Rubrik_Pro_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Rubrik Pro bundle is a promo bundle with Premium Support, Radar, GPS and CloudOn features</description>
    <inlineHelpText>Rubrik Pro bundle is a promo bundle with Premium Support, Radar, GPS and CloudOn features</inlineHelpText>
    <label>Rubrik Pro Bundle</label>
    <type>Checkbox</type>
</CustomField>