force-app/main/default/objects/CPQ_Product_Rule_Table__c/fields/Select_Node_Product__c.field-meta.xml
<CustomField>
    <fullName>Select_Node_Product__c</fullName>
    <label>Select Node/Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>R6416</fullName>
            </value>
            <value>
                <fullName>R6412</fullName>
            </value>
            <value>
                <fullName>R6410</fullName>
            </value>
            <value>
                <fullName>R6408</fullName>
            </value>
            <value>
                <fullName>RAMA</fullName>
            </value>
            <value>
                <fullName>R6404</fullName>
            </value>
            <value>
                <fullName>R6304</fullName>
            </value>
            <value>
                <fullName>F10404</fullName>
            </value>
            <value>
                <fullName>F10408</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>