force-app/main/default/objects/CPQ_Product_Rule_Table__c/fields/SW_Encryption_Trade_Up__c.field-meta.xml
<CustomField>
    <fullName>SW_Encryption_Trade_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SW Encryption Trade Up</label>
    <type>Checkbox</type>
</CustomField>