force-app/main/default/objects/CPQ_Product_Rule_Table__c/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <description>Unique Name for Data Migration</description>
    <formula>Product__r.ProductCode &amp; &quot;#&quot; &amp; TEXT(Type__c)  &amp;&quot;#&quot;&amp;  TEXT(Capacity__c) &amp; TEXT(Chassis_Required__c) &amp; TEXT(Encryption__c) &amp; TEXT( Select_Node_Product__c ) &amp; TEXT(HPEorUCS__c) &amp; IF(Include_CloudOut__c,&quot;TRUE&quot;,&quot;FALSE&quot;) &amp; TEXT(NetworkType__c) &amp; IF(Required__c,&quot;TRUE&quot;,&quot;FALSE&quot;) &amp; IF(Rubrik_Pro_Bundle__c,&quot;TRUE&quot;,&quot;FALSE&quot;) &amp; IF(SW_Encryption_Trade_Up__c,&quot;TRUE&quot;,&quot;FALSE&quot;)</formula>
    <inlineHelpText>Unique Name for Data Migration</inlineHelpText>
    <label>Unique Name</label>
    <type>Text</type>
</CustomField>