force-app/main/default/objects/CPQ_Product_Rule_Table__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Product__c</columns>
    <columns>Required__c</columns>
    <columns>Message__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Encryption__c</columns>
    <columns>Capacity__c</columns>
    <columns>NetworkType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>