force-app/main/default/objects/CPQ_Product_Rule_Table__c/listViews/RBK_R6410S.listView-meta.xml
<ListView>
    <fullName>RBK_R6410S</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Product__c</columns>
    <columns>Capacity__c</columns>
    <columns>Chassis_Required__c</columns>
    <columns>Encryption__c</columns>
    <columns>HPEorUCS__c</columns>
    <columns>NetworkType__c</columns>
    <columns>Rubrik_Pro_Bundle__c</columns>
    <columns>Select_Node_Product__c</columns>
    <columns>SW_Encryption_Trade_Up__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>startsWith</operation>
        <value>RBK-R6410S-0</value>
    </filters>
    <label>RBK-R6410S</label>
</ListView>